# qrCodeImageSorter

./: .gitignore  LICENSE  README.md  demo_list.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
gui_source/: __main__.py  image_grid.py  image_widget.py
qrImageIndexer/: __init__.py  __main__.py  generate_qr_wrapper.py  photo_sorter.py  qr_generator.py  write_pdf_fpf2.py
qr_image_indexer/: __main__.py  photo_sorter.py  qr_generator.py  write_pdf.py  write_pdf_fpf2.py
qr_source/: __main__.py  photo_sorter.py  qr_generator.py
test/: test_pdf_build_fpdf2.py  test_photo_sorter.py  test_qr_generator.py  test_qr_pdf_wrapper.py
