[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qrImageIndexer"
version = "0.6.1"
description = "Tool for indexing images with QR codes"
readme = "README.md"
authors = [{name = "Jonathan Pecar", email = "jonathan.pecar@gmail.com"}]
license = { file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sorter", "qrcode", "photosorter"]
dependencies = [
        "pyzbar",
        "pillow",
        "fpdf2",
        "qrcode",
        "tqdm",
        "opencv-python"
]
requires-python = ">=3.6"
[project.optional-dependencies]
dev = ["pytest", "bumpver", "setuptools"]

[project.urls]
Homepage = "https://github.com/jonpecar/qrCodeImageSorter"
[tool.bumpver]
current_version = "0.6.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
'pyproject.toml' = [
    'current_version = "{version}"',
    'version = "{version}"',
]
'qrImageIndexer\\__init__.py' = [
    '__version__ = "{version}"',
]

